src/test/deca/context/invalid/class/double-def-in-method.deca
// Programme testant la double définition à l'intérieur d'une méthode

class A {
    void method() {
        int i;
        float i;
    }
}